🐛 fix:  error message spacing

--- a/cnab-processor-web/src/pages/home/styles.module.css
+++ b/cnab-processor-web/src/pages/home/styles.module.css
@@ -44,6 +44,10 @@
   gap: 8px;
 }
 
+.errorWrap {
+  margin-top: 14px;
+}
+
 @media (max-width: 860px) {
   .formWrap {
     display: flex;
